feat: file deletion handling init